added my own linkedin profile

--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Next it's time to load the API keys into environment variables\n",
     "# If this returns false, see the next cell!\n",
@@ -141,9 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the key - if you're not using OpenAI, check whichever key you're using! Ollama doesn't need a key.\n",
     "\n",
@@ -159,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,9 +216,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 2 equals 4.\n"
+     ]
+    }
+   ],
    "source": [
     "# And now call it! Any problems, head to the troubleshooting guide\n",
     "# This uses GPT 4.1 nano, the incredibly cheap model\n",
@@ -216,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,9 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A bat and a ball cost $1.10 in total. The bat costs $1.00 more than the ball. How much does the ball cost?\n"
+     ]
+    }
+   ],
    "source": [
     "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
     "\n",
@@ -246,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,9 +291,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's define the cost of the ball as \\( x \\).\n",
+      "\n",
+      "Given:\n",
+      "- The bat costs $1.00 more than the ball, so the bat costs \\( x + 1.00 \\).\n",
+      "- Together, the bat and ball cost $1.10.\n",
+      "\n",
+      "Set up the equation:\n",
+      "\\[\n",
+      "x + (x + 1.00) = 1.10\n",
+      "\\]\n",
+      "\n",
+      "Combine like terms:\n",
+      "\\[\n",
+      "2x + 1.00 = 1.10\n",
+      "\\]\n",
+      "\n",
+      "Subtract 1.00 from both sides:\n",
+      "\\[\n",
+      "2x = 0.10\n",
+      "\\]\n",
+      "\n",
+      "Divide both sides by 2:\n",
+      "\\[\n",
+      "x = 0.05\n",
+      "\\]\n",
+      "\n",
+      "**Answer:** The ball costs **5 cents**.\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask it again\n",
     "\n",
@@ -273,9 +342,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Let's define the cost of the ball as \\( x \\).\n",
+       "\n",
+       "Given:\n",
+       "- The bat costs $1.00 more than the ball, so the bat costs \\( x + 1.00 \\).\n",
+       "- Together, the bat and ball cost $1.10.\n",
+       "\n",
+       "Set up the equation:\n",
+       "\\[\n",
+       "x + (x + 1.00) = 1.10\n",
+       "\\]\n",
+       "\n",
+       "Combine like terms:\n",
+       "\\[\n",
+       "2x + 1.00 = 1.10\n",
+       "\\]\n",
+       "\n",
+       "Subtract 1.00 from both sides:\n",
+       "\\[\n",
+       "2x = 0.10\n",
+       "\\]\n",
+       "\n",
+       "Divide both sides by 2:\n",
+       "\\[\n",
+       "x = 0.05\n",
+       "\\]\n",
+       "\n",
+       "**Answer:** The ball costs **5 cents**."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
@@ -318,21 +426,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Certainly! Here's a detailed business model tailored for a quantitative (quant) trading firm:\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Quant Trading Business Model\n",
+      "\n",
+      "**1. Value Proposition:**\n",
+      "- Utilize advanced mathematical models, statistics, and algorithms to identify trading opportunities.\n",
+      "- Execute trades at high speed and volume, capturing small, consistent profits.\n",
+      "- Offer superior risk-adjusted returns through systematic, data-driven strategies.\n",
+      "- Minimize human emotional bias by relying on automated models.\n",
+      "\n",
+      "**2. Target Customers:**\n",
+      "- Institutional investors (hedge funds, pension funds, endowments) seeking alpha.\n",
+      "- High-net-worth individuals interested in alternative investments.\n",
+      "- Proprietary trading desks within investment banks.\n",
+      "\n",
+      "**3. Revenue Streams:**\n",
+      "- **Management Fees:** A fixed percentage of assets under management (AUM), e.g., 1-2% annually.\n",
+      "- **Performance Fees:** Percentage of profits generated, commonly 15-20%.\n",
+      "- **Proprietary Trading Gains:** Profits from trading the firm’s own capital.\n",
+      "- **Licensing Models/Technology:** Offering tools or algorithms to other traders or firms.\n",
+      "- **Consulting Services:** Providing quantitative research or strategy development.\n",
+      "\n",
+      "**4. Key Resources:**\n",
+      "- Experienced quantitative researchers, data scientists, and traders.\n",
+      "- Access to high-quality, large-scale datasets (market data, alternative data).\n",
+      "- High-performance computing infrastructure.\n",
+      "- Low-latency execution platforms and APIs.\n",
+      "- Robust risk management systems.\n",
+      "\n",
+      "**5. Key Activities:**\n",
+      "- Research and development of trading algorithms.\n",
+      "- Backtesting strategies on historical data.\n",
+      "- Real-time monitoring and execution of trades.\n",
+      "- Continuous portfolio and risk management.\n",
+      "- Data acquisition, cleaning, and processing.\n",
+      "- Compliance with regulatory requirements.\n",
+      "\n",
+      "**6. Key Partners:**\n",
+      "- Data vendors (market data, alternative data providers).\n",
+      "- Technology providers (cloud platforms, brokers with API access).\n",
+      "- Execution venues and liquidity providers.\n",
+      "- Legal and compliance consultants.\n",
+      "- Financial institutions (for capital raising or seed funding).\n",
+      "\n",
+      "**7. Cost Structure:**\n",
+      "- Personnel salaries (quants, developers, traders).\n",
+      "- Data licensing fees.\n",
+      "- Technology expenses (servers, cloud services, software licenses).\n",
+      "- Transaction costs (commissions, slippage).\n",
+      "- Regulatory and compliance costs.\n",
+      "- Office and operational overhead.\n",
+      "\n",
+      "**8. Channels:**\n",
+      "- Direct relationships with institutional investors and asset managers.\n",
+      "- Industry conferences and networking events.\n",
+      "- Digital presence showcasing track record and research.\n",
+      "- Partnerships with wealth management firms.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Example Business Model Canvas for a Quant Trading Firm\n",
+      "\n",
+      "| Building Block        | Description                                                  |\n",
+      "|----------------------|--------------------------------------------------------------|\n",
+      "| **Value Proposition** | Systematic, data-driven trading strategies generating alpha. |\n",
+      "| **Customer Segments** | Institutions, HNWIs, prop desks.                             |\n",
+      "| **Channels**          | Direct sales, conferences, online presence.                  |\n",
+      "| **Customer Relationships** | Personalized service, transparent reporting.            |\n",
+      "| **Revenue Streams**   | Management fees, performance fees, proprietary gains.         |\n",
+      "| **Key Resources**     | Quants, data, tech infrastructure.                           |\n",
+      "| **Key Activities**    | Research, trading, risk management.                          |\n",
+      "| **Key Partnerships**  | Data providers, brokers, tech vendors.                       |\n",
+      "| **Cost Structure**    | Salaries, data, tech, transaction costs.                     |\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Additional Considerations:\n",
+      "- **Regulation & Compliance:** Adhere to SEC or relevant financial authorities' guidelines.\n",
+      "- **Risk Management:** Employ strict limits to avoid catastrophic losses.\n",
+      "- **Scalability:** Strategies should be scalable with increased capital.\n",
+      "- **Transparency:** Provide investors with regular performance reports.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "If you want, I can help you develop specific sections further or build a financial projection model. Would you like me to assist with that?\n"
+     ]
+    }
+   ],
    "source": [
     "# First create the messages:\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"Something here\"}]\n",
+    "messages = [{\"role\": \"user\", \"content\": \"I need a business model for quant traders\"}]\n",
     "\n",
     "# Then make the first call:\n",
     "\n",
-    "response =\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
     "\n",
     "# Then read the business idea:\n",
     "\n",
-    "business_idea = response.\n",
+    "business_idea = response.choices[0].message.content\n",
+    "print(business_idea)\n",
+    "\n",
     "\n",
     "# And repeat! In the next message, include the business idea within the message"
    ]
@@ -345,7 +552,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agents",
    "language": "python",
    "name": "python3"
   },
@@ -359,7 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
