--- a/2_openai/2_lab2.ipynb
+++ b/2_openai/2_lab2.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,25 +64,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(override=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "202\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's just check emails are working for you\n",
     "\n",
     "def send_test_email():\n",
     "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))\n",
-    "    from_email = Email(\"ed@edwarddonner.com\")  # Change to your verified sender\n",
-    "    to_email = To(\"ed.donner@gmail.com\")  # Change to your recipient\n",
+    "    from_email = Email(\"schreiber.felipe@poli.ufrj.br\")  # Change to your verified sender\n",
+    "    to_email = To(\"schreiber.felipe@gmail.com\")  # Change to your recipient\n",
     "    content = Content(\"text/plain\", \"This is an important test email\")\n",
     "    mail = Mail(from_email, to_email, \"Test email\", content).get()\n",
     "    response = sg.client.mail.send.post(request_body=mail)\n",
@@ -128,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,8 +336,8 @@
     "def send_email(body: str):\n",
     "    \"\"\" Send out an email with the given body to all sales prospects \"\"\"\n",
     "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))\n",
-    "    from_email = Email(\"ed@edwarddonner.com\")  # Change to your verified sender\n",
-    "    to_email = To(\"ed.donner@gmail.com\")  # Change to your recipient\n",
+    "    from_email = Email(\"schreiber.felipe@poli.ufrj.br\")  # Change to your verified sender\n",
+    "    to_email = To(\"schreiber.felipe@gmail.com\")  # Change to your recipient\n",
     "    content = Content(\"text/plain\", body)\n",
     "    mail = Mail(from_email, to_email, \"Sales email\", content).get()\n",
     "    sg.client.mail.send.post(request_body=mail)\n",
@@ -524,8 +543,8 @@
     "def send_html_email(subject: str, html_body: str) -> Dict[str, str]:\n",
     "    \"\"\" Send out an email with the given subject and HTML body to all sales prospects \"\"\"\n",
     "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))\n",
-    "    from_email = Email(\"ed@edwarddonner.com\")  # Change to your verified sender\n",
-    "    to_email = To(\"ed.donner@gmail.com\")  # Change to your recipient\n",
+    "    from_email = Email(\"schreiber.felipe@poli.ufrj.br\")  # Change to your verified sender\n",
+    "    to_email = To(\"schreiber.felipe@gmail.com\")  # Change to your recipient\n",
     "    content = Content(\"text/html\", html_body)\n",
     "    mail = Mail(from_email, to_email, subject, content).get()\n",
     "    sg.client.mail.send.post(request_body=mail)\n",
@@ -709,7 +728,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agents",
    "language": "python",
    "name": "python3"
   },
@@ -723,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
